[package]
name = "iron-tera"
version = "0.4.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
description = "This is an Iron middleware for the Tera templating library"
repository = "https://github.com/leshow/iron-tera"
homepage = "https://github.com/leshow/iron-tera"
documentation = "https://docs.rs/iron-tera/"
keywords = ["iron", "tera", "middleware", "templating"]
license = "MIT"
exclude = ["src/test_template"]

[dependencies]
iron = "0.5.0"
router = "0.5.0"
tera = "0.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
plugin = "0.2.0"

[features]
default = []
unstable = []